@@ -18,7 +18,6 @@ extras =
     test
     {mac,linux}: xmlsec
     py{35,36,37,38}: async
-    py{35,36,37,38}: tornado
 deps =
     py{35,36,37,38}: aioresponses==0.5.0
     py{35,36,37,38}: aiohttp==3.4.4
