@@ -1,6 +1,9 @@
 4.0.0 (unreleased)
 ------------------
  - Drop support for Python 2.7, 3.3 and 3.4
+ - Remove the Tornado transport class from Zeep. This can be moved to it's own
+   Python package if anyone is interested.
+
 
 3.4.0 (2019-06-05)
 ------------------
